fix: update section content styles for improved layout and spacing

--- a/docs/css/intro-1.css
+++ b/docs/css/intro-1.css
@@ -455,8 +455,10 @@ h4 {
     margin-left: var(--space-s);
   }
 
-  .section-content :first-child {
-    margin-bottom: 0;
+  .section-content {
+    margin-inline: 0;
+    padding: 0 var(--space-l);
+    width: 100%;
   }
 
   .section-content img {
